<resources>
    <string name="app_name">onTime</string>
    <string name="max_speed">Max Speed</string>
    <string name="average_speed">Average Speed</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="accuracy">Accuracy</string>
    <string name="satellite">Satellites</string>

    <string name="waiting_for_fix">Waiting for GPS fix …</string>
    <string name="gps_disabled">GPS disabled</string>
    <string name="please_enable_gps">In order to use this app, you need the GPS to be enabled.</string>

    <string name="running">Route in process…</string>
    <string name="notification">Max Speed : %1$s, Distance : %2$s.</string>

    <string name="settings">Settings</string>
    <string name="app_info">About this app</string>
    <string name="pref_auto_average">Automatically detect stop time.</string>
    <string name="pref_auto_average_summary">The time spent not in motion will not count in the average speed.</string>
    <string name="pref_miles_per_hour">Use miles per hour</string>
    <string name="pref_miles_per_hour_summary">Display the speed in mi/h instead of km/h</string>

    <string name="license">License</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">Click in order to support my work :) …</string>
    <string name="source_code">GitHub</string>
    <string name="source_code_summary">Access to the source code.</string>
    <string name="version">Speedometer Version</string>

    <string name="noti_id" translatable="false">Speedometerisanid</string>
    <string name="github" translatable="false">https://github.com/flyingrub/SpeedMeter</string>
    <string name="license_type" translatable="false">GNU General Public License 2</string>
    <string name="doante_url" translatable="false">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=6DE8SFMJKRVK2</string>
    <string name="title_activity_m_page">MPage</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- Channel ID for notification channel -->
    <string name="CHANNEL_ID">"com.example.ontime.channel"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="success">MALAKA IT WORKED</string>
    <string name="world_pic_desc">Person Holding World</string>
    <string name="all_set">You Are All Set</string>
    <string name="cool">Cool</string>
    <string name="the_world_is_yours">The World is Yours!</string>
    <string name="two">02:00</string>
    <string name="keep_walking">Keep Walking...</string>
    <string name="countimage_desc">Person walking</string>
    <string name="zero_speed">0.0 m/s</string>
    <string name="metric_units">Metric Units</string>
    <string name="welcome_to_app">Welcome to onTime</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="never_late">Never be late again!</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_not_member">Not a member? Sign Up!</string>
    <string name="promo_desc">Use our revolutionary app that will get you there on time, using your own pace!</string>
    <string name="plan">Plan Trip</string>
    <string name="home_icon">Home Icon</string>
    <string name="arrival_time">Arrival Time:</string>

    <string name="location_access_required">Location access is required to use map utilities.</string>
    <string name="ok">OK</string>
    <string name="location_unavailable">Permission is not available. Requesting location permission.</string>
    <string name="location_permission_granted">Location permission was granted.</string>
    <string name="location_permission_denied">Location permission request was denied.</string>
    <string name="background_location_permission_granted">Background Location permission was granted.</string>
    <string name="background_location_permission_denied">Background Location permission request was denied.</string>
    <string name="background_access_required">Background Location access is required to update on trips.</string>
    <string name="background_location_unavailable">Permission is not available. Requesting background location permission.</string>
    <string name="avg_speed_not_found_img_desc">Couldn\'t find your average walking speed.</string>
    <string name="never_sell">WE WILL NEVER SELL OR GIVE YOUR INFORMATION TO ANYONE</string>
    <string name="i_am_not_outside">I AM NOT OUTSIDE</string>
    <string name="average_speed_not_found">AVERAGE SPEED NOT FOUND</string>
    <string name="cant_start_calculations">We cannot do all of our smart calculations without having your average speed</string>
    <string name="need_to_be_outside">YOU HAVE TO BE OUTSIDE TO DO THE TEST,</string>
    <string name="walk_at_normal_speed">PLEASE WALK AT YOUR NORMAL SPEED</string>
    <string name="start_the_test">I AM OUTSIDE, START THE TEST!</string>
    <string name="textview">TextView</string>
    <string name="pick_an_alternative_starting_point">Pick an alternative starting point</string>
    <string name="cant_reach_destination_on_foot">According to our calculations you can’t get there from your current location, on foot</string>
    <string name="to">To...</string>
    <string name="from">From...</string>
    <string name="bags_img_desc">Man walking with bag</string>
    <string name="select_your_speed">SELECT YOUR SPEED</string>
    <string name="your_friends_txt3_img_desc">Woman Walking</string>
    <string name="thats_ok">That\'s Ok.</string>
    <string name="select_speed">Please select with 100% honesty what you feel accurately describes your walking speed.</string>
    <string name="take_speed_test_anytime">You will be able to take the actual speed test whenever you want and you are outside, from the settings of the app.</string>
    <string name="slow">SLOW</string>
    <string name="average">AVERAGE</string>
    <string name="quite_slow">QUITE SLOW</string>
    <string name="quite_fast">QUITE FAST</string>
    <string name="fast">FAST</string>
    <string name="done">Done</string>
    <string name="time_big">TIME</string>
    <string name="date">DATE</string>
    <string name="tell_the_date">Please tell us the date you want to be there</string>
    <string name="got_it">Got it!</string>
    <string name="and_the_time">and the time?</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="search_location">Search Location</string>
    <string name="super_img_desc">Man watching time</string>
    <string name="supers">Super!</string>
    <string name="we_will_notify">WE WILL NOTIFY YOU WHEN YOU SHOULD START WALKING</string>
    <string name="upcoming_walks">UPCOMING WALKS</string>
    <string name="delete_walk">Delete walk</string>
    <string name="start">START</string>
    <string name="two_minute_test_run_prompt">We will do a 2 minutes test run, that will help us calculate your average walking speed.</string>
    <string name="lets_do_a_test_run">Lets do a test run!</string>
    <string name="welcome">WELCOME</string>
    <string name="use_avg_walk_speed_prompt">We will use your average walking speed to better suggest when you should start your journey, and other smart suggestions such as what speed you need to have to be there on time, in case you are running late!</string>
    <string name="speed_test_img_desc">Person measuring speed</string>
    <string name="textview1">TextView1</string>
    <string name="textview2">TextView2</string>
    <string name="textview3">TextView3</string>
    <string name="edit">EDIT</string>
    <string name="plan_meeting">Plan meeting</string>
    <string name="textplacetime">TextPlaceTime</string>
    <string name="textinvitedby">TextInvitedBy</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="go_alone">Do you want to go there alone?</string>
    <string name="yes">Yes</string>
    <string name="no_i_want_to_meet_friends">No, I want to meet friends</string>
    <string name="add_a_friend">ADD A FRIEND</string>
    <string name="type_your_friends_email_prompt">Type your friend\'s email...</string>
    <string name="please_tell_us_the_email_of_your_friend">Please tell us the email of your friend</string>
    <string name="send_request">Send Request</string>
    <string name="friends_hanging_out_pic_desc">Friends Hanging Out</string>
    <string name="friend_requests">FRIEND REQUESTS</string>
    <string name="no_new_requests">No new requests</string>
    <string name="confirm">Confirm</string>
    <string name="meeting_requests_big">MEETING REQUESTS</string>
    <string name="no_new_meeting_requests">No new meeting requests</string>
    <string name="meeting_planned_successfully">Meeting planned successfully</string>
    <string name="plan_a_meeting">PLAN A MEETING</string>
    <string name="search_location_hint">Search location...</string>
    <string name="where_do_you_want_to_meet">WHERE DO YOU WANT TO MEET?</string>
    <string name="meet">Meet</string>
    <string name="invite_your_friends">INVITE YOUR FRIENDS</string>
    <string name="click_to_invite">CLICK TO INVITE</string>
    <string name="select_a_date_and_time">SELECT A DATE AND TIME</string>
    <string name="plan_meeting_big">PLAN MEETING</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="socialize">SOCIALIZE</string>
    <string name="add_friend">Add Friend</string>
    <string name="meeting_requests">Meeting Requests</string>
    <string name="please_wait">Please Wait...</string>
    <string name="your_friends">YOUR FRIENDS</string>
    <string name="person">person</string>
    <string name="go">Go</string>
    <string name="where_do_you_want_to_go">WHERE DO YOU WANT TO GO?</string>
    <string name="search_location_dots">Search location...</string>
</resources>
