<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn_UpClasses.Cool"
    android:background="@drawable/cool"
    android:paddingLeft="50dp"
    android:paddingRight="50dp">

    <ImageView
        android:id="@+id/world_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/world"
        android:contentDescription="@string/world_pic_desc" />

    <TextView
        android:id="@+id/youAreSet_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/all_set"
        android:textColor="@color/blgrey"
        android:textSize="28sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/world_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cool_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/cool"
        android:textColor="@color/blgrey"
        android:textSize="28sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/youAreSet_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/the_world_is_yours"
        android:textColor="@color/blgrey"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/world_pic" />

</androidx.constraintlayout.widget.ConstraintLayout>